collapse fixing

--- a/assets/scss/molecules/_collapse.scss
+++ b/assets/scss/molecules/_collapse.scss
@@ -6,6 +6,7 @@
     border-radius: .8em;
     .collapse-h2 {
         font-size: 2em;
+        font-weight: 700;
     }
     .collapse-content {
         margin-top: 5px;
@@ -15,6 +16,7 @@
         text-align: left;
         .collapse-heading{
             font-size: 1.4em;
+            font-weight: 600;
         }
         .collapse__subHeading {
             color: #aaa;
